# pcl

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cube5cm2_downsampled.pcd  cube5cm2_segmented_0.pcd  cube5cm2_segmented_0_inliers.pcd  draw_model  draw_model.cpp  extract_indices  extract_indices.cpp  final.pcd  icp.cpp  interactive_icp  interactive_icp.cpp  model_draw.pcd  statistical_removal  statistical_removal.cpp  test_cokecan_scene.pcd  test_scene.pcd
temp/: final.pcd  model_two_faces.pcd  transformed_cloud.pcd
